node 2 ast nearly finished